--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/react-router-dom": "^5.3.3",
+    "@types/swiper": "^5.4.3",
     "@types/webpack": "^5.28.5",
     "@types/webpack-bundle-analyzer": "^4.7.0",
     "@types/webpack-dev-server": "^4.7.1",
@@ -63,9 +64,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "swiper": "^11.2.5"
   }
 }
